# real_estate_seach

./: .gitignore  README.md  docker-compose.dev.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: dependencies.py  main.py
backend/app/core/: config.py  database.py  startup_checks.py
backend/app/models/: real_estates.py
backend/app/persistence/: seed.sql
backend/app/repositories/: real_estate_repository.py
backend/app/routers/: chat.py
backend/app/schemas/: search.py
backend/app/services/: ollama_service.py  real_estate_service.py  sql_validator.py
backend/app/utils/: user_query.py
backend/persistence/: schema.sql  seed.sql
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: RealEstate.tsx  RealEstateCard.tsx
frontend/src/hooks/: useRealEstate.tsx
frontend/src/lib/: axios.ts
frontend/src/types/: Api.ts  RealEstate.ts
