[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cryptography>=46.0.6",
    "fastapi[standard]>=0.128.8",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.11.0",
    "pymysql>=1.1.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.39.0",
]
